--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "noImplicitAny": false,
-    "target": "es2020",
+    "target": "ESNext",
     "lib": [
-      "es2020"
+      "ESNext"
     ],
     "allowJs": true,
     "noEmit": true,
